methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:40: error: Unmatched closing brace '}' ignored here
}
^